hidden scrollbar and fixed border radius img

--- a/resources/scss/show.scss
+++ b/resources/scss/show.scss
@@ -1,15 +1,33 @@
+// utilities
 .bottom-border {
     border-bottom: 1px #172BA1 solid;
 }
 
-#eye-catcher img {
-    object-fit: cover;
+// styling elements
+#show>* {
+    background-color: white;
+    border-radius: 25px;
+    margin-bottom: 1rem;
+    padding: 1rem;
 }
 
-// #eye-catcher img,
-#eye-catcher div {
-    overflow: hidden;
-    max-height: 384px;
+#eye-catcher {
+    img {
+        object-fit: cover;
+        width: 100%;
+        max-height: 384px;
+        border-radius: 25px;
+        padding: 0;
+    }
+
+    div {
+        overflow-y: auto;
+        max-height: 384px;
+    }
+
+    div::-webkit-scrollbar {
+        display: none;
+    }
 }
 
 #details li,
